@@ -14,6 +14,7 @@ Improved documentation
   * aes(mpg, wt) is now equivalent to aes(x = mpg, y = wt)
   * scale_continuous: tweaks to minor breaks to make appearance better on wider range of coordinate systems
 
+  * coord_equal: should now work correctly in all situations
   * stat_quantile: updated to work with latest version of quantreg
   * stat_qq: axes flipped to agree with base R
   * stat_qq: now uses sample aesthetic to select variable for summary
